--- a/MainPage.html
+++ b/MainPage.html
@@ -13,9 +13,9 @@
         <div class="header">
             <div class="header-main">
                 <div class="header-contents">
-                    <a href="asd">Home</a>
+                    <a href="MainPage.html">Home</a>
                 </div>
-                <div class="header-sidebar"><a href="asd">한승준</a></div>
+                <div class="header-sidebar"><a href="MainPage.html">한승준</a></div>
             </div>
         </div>
     </header>
