--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="header">
             <div class="header-main">
                 <div class="header-contents">
-                    <a href="index">Home</a>
+                    <a href="index.html">Home</a>
                 </div>
-                <div class="header-sidebar"><a href="index">한승준</a></div>
+                <div class="header-sidebar"><a href="index.html">한승준</a></div>
             </div>
         </div>
     </header>
